infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PatientManagementVPC522067E7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1SubnetC8305E9D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet1EIPC113BD7F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet1EIPC113BD7F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB",
    "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4"
   ]
  },
  "PatientManagementVPCPublicSubnet2Subnet07CEC558": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTable391C4D34": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet2EIP208E0C4A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet2NATGateway28B0784D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet2EIP208E0C4A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916",
    "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09"
   ]
  },
  "PatientManagementVPCPrivateSubnet1Subnet05B10E79": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableAssociationAA604973": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1DefaultRouteC24DADA9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2Subnet8A2E409C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableAssociationC55EBEF2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2DefaultRoute98121A2D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet2NATGateway28B0784D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    }
   }
  },
  "PatientManagementVPCIGWA0746919": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCVPCGW1FFEFAEB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "authServiceDBSubnetGroup4FBC5608": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for authServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "authServiceDBSecurityGroupC4EF258F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for authServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "localstackauthServiceDBSecret119D64943fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "authServiceDBSecretAttachment52CD3A06": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackauthServiceDBSecret119D64943fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "authServiceDB07F28A5B"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "authServiceDB07F28A5B": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "authServiceDBSubnetGroup4FBC5608"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackauthServiceDBSecret119D64943fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "authServiceDBSecurityGroupC4EF258F",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "patientServiceDBSubnetGroup319304A7": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for patientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "patientServiceDBSecurityGroupBFE885B4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for patientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "localstackpatientServiceDBSecret210E0DDF3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "patientServiceDBSecretAttachmentBFD46006": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackpatientServiceDBSecret210E0DDF3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "patientServiceDBFD309E6E"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "patientServiceDBFD309E6E": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "patientServiceDBSubnetGroup319304A7"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackpatientServiceDBSecret210E0DDF3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "patientServiceDBSecurityGroupBFE885B4",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "authServiceDB07F28A5B",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "authServiceDB07F28A5B",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "patientServiceDBFD309E6E",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "patientServiceDBFD309E6E",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      },
      {
       "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
     ],
     "InstanceType": "kafka.m5.large"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "",
    "NumberOfBrokerNodes": 1
   }
  }
 }
}
